--- a/stylehome/static/core/css/style.css
+++ b/stylehome/static/core/css/style.css
@@ -32,21 +32,20 @@ a {
 
 .custom-navbar {
   background: #BDCDD0 !important;
-  padding-top: 20px;
-  padding-bottom: 5px; }
-
-.line {
-    width: 100%;
-    height: 11px;
-    background: #BDCDD0 !important;
-    padding-bottom: 10px;
+  padding: 15px 0;
 }
-.line .lineblack {
-    margin-top: 5px;
-    margin: auto;
-    width: 92%;
-    height: 1px !important;
-    background-color: black;
+
+.line-custom-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #BDCDD0;
+}
+
+.line-custom {
+  width: 90%;
+  border-top: #000000 1px solid;
+  background-color: #BDCDD0;
 }
 
   .custom-navbar .navbar-brand {
