--- a/stylehome/templates/layout/base.html
+++ b/stylehome/templates/layout/base.html
@@ -19,6 +19,7 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" type="text/css" href="{% static 'core/css/bootstrap.min.css' %}">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/dist/tabler-icons.min.css" />
 	<link href="{% static 'core/css/tiny-slider.css' %}" rel="stylesheet">
 	<link href="{% static 'core/css/style.css' %}" rel="stylesheet">
 	{% block extra_css %}
@@ -68,27 +69,18 @@
 					<li class="{% if request.path == '/about/' %}nav-item active{% endif %}">
 						<a class="nav-link" href="{% url 'about' %}">About us</a>
 					</li>
-					<!--<li class="{% if request.path == '/service/' %}nav-item active{% endif %}">
-						<a class="nav-link" href="{% url 'service' %}">Services</a>
-					</li>
-					<li class="{% if request.path == '/blog/' %}nav-item active{% endif %}">
-						<a class="nav-link" href="{% url 'blog' %}">We</a>
-					</li>-->
 					<li class="{% if request.path == '/contact/' %}nav-item active{% endif %}">
 						<a class="nav-link" href="{% url 'contact' %}">Contact us</a>
 					</li>
 				</ul>
 
 				<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-					<li><a class="nav-link" href="{% url 'login' %}"><img src="{% static 'core/icons/user.png' %}"></a></li>
-					<li><a class="nav-link" href="{% url 'cart' %}"><img src="{% static 'core/icons/shop.png' %}"></a></li>
+					<li><a class="nav-link" href="{% url 'login' %}"><i class="fa-solid fa-user"></i></a></li>
+					<li><a class="nav-link" href="{% url 'cart' %}"><i class="fa-solid fa-cart-shopping"></i></a></li>
 				</ul>
 			</div>
 		</div>
 	</nav>
-	<div class="line"> 
-		<div class="lineblack"></div>
-	</div>
     
 	<!-- End Header/Navigation -->
 
